0.9.0
-----

- Default `homestead` and `dao` fork blocks to 0.

0.8.0
-----

- Fix bug when reverting chain.

0.7.0
-----

- Add `estimate_gas` method.

0.6.0
-----

- Fix padding bug in `get_code` implementation

0.5.0
-----

- Implement filter API

0.4.0
-----

- Use gevent rather than threads.
- Fix missing block field `totalDifficulty`

0.3.0
-----

- Remove unused serpent dependency
- Add functions to mirror the `personal` account management APIs.

0.2.2
-----

- Add `mine_bock()` function to client.

0.2.1
-----

- Bugfix for `get_accounts()` to return 20-byte values rather than 32byte
  padded values.

0.2.0
-----

- Python 3 Compatability

0.1.1
-----

- Bugfix for transaction topic encoding

0.1.0
-----

- Initial release