@@ -5,3 +5,5 @@
 
 Python client for testing applications that use either the
 [ethereum-rpc-client](https://github.com/pipermerriam/ethereum-rpc-client) or the [ethereum-ipc-client](https://github.com/pipermerriam/ethereum-ipc-client).
+
+This library internally uses gevent. [Please see how to enable gevent async stdlib for your application](http://www.gevent.org/gevent.monkey.html).
