@@ -1,3 +1,8 @@
+Unreleased
+----------
+
+- Removed implicit gevent dependency
+
 0.9.0
 -----
 
